:white_check_mark: Fix tests on menus and dishs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     password: admin
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    generate-ddl: off
+    generate-ddl: on
     hibernate:
       ddl-auto: none
   sql:
