:passport_control: Add in memory authentication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,4 +35,13 @@ spring:
 # --- End Postgres configuration ---
 
 
+authentication:
+  admin:
+    username: admin
+    password: adminpwd
+  user:
+    username: user
+    password: userpwd
+
+
 
