:passport_control: Add request authentications

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,5 +43,10 @@ authentication:
     username: user
     password: userpwd
 
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
 
 
